// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserSessionsOverview > render a <UserSessionsOverview /> with sessions 1`] = `
<div
  className="_blockList_f8cc7f"
>
  <h3
    className="_font-heading-md-semibold_1jx6b_121"
  >
    Where you're signed in
  </h3>
  <div
    className="_block_17898c _sessionListBlock_1c0f31"
  >
    <div
      className="_sessionListBlockInfo_1c0f31"
    >
      <h6
        className="_font-body-md-semibold_1jx6b_64"
      >
        Browser
      </h6>
      <p
        className="_font-body-md-regular_1jx6b_59"
      >
        2
         active
         
        sessions
      </p>
    </div>
    <a
      className="_linkButton_b80ad8"
      href="/browser-sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
  <div
    className="_block_17898c _sessionListBlock_1c0f31"
  >
    <div
      className="_sessionListBlockInfo_1c0f31"
    >
      <h6
        className="_font-body-md-semibold_1jx6b_64"
      >
        New apps
      </h6>
      <p
        className="_font-body-md-regular_1jx6b_59"
      >
        3
         active
         
        sessions
      </p>
    </div>
    <a
      className="_linkButton_b80ad8"
      href="/oauth2-sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
  <div
    className="_block_17898c _sessionListBlock_1c0f31"
  >
    <div
      className="_sessionListBlockInfo_1c0f31"
    >
      <h6
        className="_font-body-md-semibold_1jx6b_64"
      >
        Regular apps
      </h6>
      <p
        className="_font-body-md-regular_1jx6b_59"
      >
        1
         active
         
        session
      </p>
    </div>
    <a
      className="_linkButton_b80ad8"
      href="/compat-sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
</div>
`;

exports[`UserSessionsOverview > render an simple <UserSessionsOverview /> 1`] = `
<div
  className="_blockList_f8cc7f"
>
  <h3
    className="_font-heading-md-semibold_1jx6b_121"
  >
    Where you're signed in
  </h3>
  <div
    className="_block_17898c _sessionListBlock_1c0f31"
  >
    <div
      className="_sessionListBlockInfo_1c0f31"
    >
      <h6
        className="_font-body-md-semibold_1jx6b_64"
      >
        Browser
      </h6>
      <p
        className="_font-body-md-regular_1jx6b_59"
      >
        0
         active
         
        sessions
      </p>
    </div>
    <a
      className="_linkButton_b80ad8"
      href="/browser-sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
  <div
    className="_block_17898c _sessionListBlock_1c0f31"
  >
    <div
      className="_sessionListBlockInfo_1c0f31"
    >
      <h6
        className="_font-body-md-semibold_1jx6b_64"
      >
        New apps
      </h6>
      <p
        className="_font-body-md-regular_1jx6b_59"
      >
        0
         active
         
        sessions
      </p>
    </div>
    <a
      className="_linkButton_b80ad8"
      href="/oauth2-sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
  <div
    className="_block_17898c _sessionListBlock_1c0f31"
  >
    <div
      className="_sessionListBlockInfo_1c0f31"
    >
      <h6
        className="_font-body-md-semibold_1jx6b_64"
      >
        Regular apps
      </h6>
      <p
        className="_font-body-md-regular_1jx6b_59"
      >
        0
         active
         
        sessions
      </p>
    </div>
    <a
      className="_linkButton_b80ad8"
      href="/compat-sessions"
      onClick={[Function]}
    >
      View all
    </a>
  </div>
</div>
`;
